@@ -9,7 +9,10 @@ Package: hydrogen
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Drum machine/step sequencer
- Hydrogen is an advanced drum machine. It's main goal is to bring professional yet simple and intuitive pattern-based drum programming. See http://www.hydrogen-music.org for details.
+ Hydrogen is an advanced drum machine. It's main goal is to bring
+ professional yet simple and intuitive pattern-based drum
+ programming. See http://www.hydrogen-music.org for details.
  .
- Warning: this package contains the development version (potentially unstable) released for testing purpose only.
+ Warning: this package contains the development version (potentially
+ unstable) released for testing purpose only.
 
